--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "sass": "^1.64.1",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
